# anyflow

./: .gitignore  CMakeLists.txt  Info.plist
desktop/: CMakeLists.txt  anyflow.pro
desktop/include/: clipboard.h  loginform.h  remoteservice.h
desktop/src/: clipboard.cpp  loginform.cpp  loginform.ui  main.cpp  remoteservice.cpp  tray.cpp
include/: clipboardlistener.h  tray.h
services/: package.json  tsconfig.json
services/src/: app.ts
src/: clipboardlistener.cpp  main.cpp  tray.cpp
win/: CMakeLists.txt
win/include/: tray.h
win/src/: clipboard.cpp  loginform.cpp  loginform.ui  main.cpp  tray.cpp
windows/: CMakeLists.txt
windows/include/: clipboard.h  loginwindow.h  session.h  tray.h
windows/src/: clipboard.cpp  loginwindow.cpp  main.cpp  session.cpp  tray.cpp
